created schema and routes

--- a/react-image-gallery-server/.env
+++ b/react-image-gallery-server/.env
@@ -1,5 +1,1 @@
-# Ignore .env file
-.env
-
-# Ignore node_modules folder
-node_modules/
+DB_URL=mongodb+srv://amadullah-raihan:0ZK7TxA8FtM54pIl@cluster0.xplq2xb.mongodb.net/react-image-gallery?retryWrites=true&w=majority
