--- a/react-image-gallery-client/package.json
+++ b/react-image-gallery-client/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.6.0",
     "next": "14.0.1",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-toastify": "^9.1.3"
