--- a/react-image-gallery-client/package.json
+++ b/react-image-gallery-client/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "framer-motion": "^10.16.4",
     "next": "14.0.1",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-loader-spinner": "^5.4.5",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
