--- a/react-image-gallery-client/package.json
+++ b/react-image-gallery-client/package.json
@@ -15,6 +15,8 @@
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
+    "react-gesture-responder": "^2.1.0",
+    "react-grid-dnd": "^2.1.2",
     "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "react-toastify": "^9.1.3"
