--- a/react-image-gallery-server/package.json
+++ b/react-image-gallery-server/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js",
-    "prod": "node app.js",
+   "dev": "set NODE_ENV=development && nodemon app.js",
+    "prod": "set NODE_ENV=production && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
